# -pluginTest2

./: README.md
PluginA/: CMakeLists.txt  PluginA_global.h  plugina.cpp  plugina.h
PluginTest/: CMakeLists.txt  PluginInterface.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  pluginmanager.cpp  pluginmanager.h
